# purplle-store-intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  assertions.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  models.py  schemas.py
app/api/: routes.py
app/core/: config.py  database.py  logging.py
app/services/: anomalies.py  demo.py  funnel.py  health.py  heatmap.py  ingestion.py  metrics.py  normalize.py  pos_loader.py  sessions.py  store_layout.py  window.py
dashboard/: app.js  dashboard.html  index.html  theme.css
data/: baseline_events.jsonl  demo_pos.csv  events_store2_official.jsonl  sample_events.jsonl  store_layout.json  store_layout_2.json
docs/: CHOICES.md  DESIGN.md
pipeline/: annotate.py  appearance.py  associate.py  config.py  detect.py  emit.py  geometry.py  layout.py  pos.py  reid.py  requirements.txt  run.sh  staff_vlm.py  tracklets.py
scripts/: _diag_entry.py  _tune_reid.py  calibrate_zones.py  make_baseline.py  make_demo_data.py  replay.py  validate_events.py
tests/: conftest.py  test_anomalies.py  test_api.py  test_data.py  test_funnel.py  test_ingestion.py  test_metrics.py  test_official_schema.py  test_pipeline.py
